# lil-bank-buddy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: USAA_Transaction_Caching_Guide.md
reports/: USAA_Transaction_Report.md  USAA_Transaction_Report_Template.md
src/: __init__.py  __main__.py  analysis.py  cli.py  db_utils.py  import_usaa_csvs.py  report_generator.py
src/commands/: __init__.py  analyze_cmd.py  import_cmd.py  report_cmd.py
src/core/: analysis.py  database.py  report.py
src/utils/: __init__.py  data_quality.py  formatters.py
